dark mode toggel task

--- a/task1/index.html
+++ b/task1/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <script src="index.js" defer></script>
 
 </head>
 
@@ -16,6 +17,10 @@
 
         <section class="profileimage">
             <img src="profileimage.jpg" alt="Profile picture of Basanta Khatri">
+        </section>
+
+        <section class="theme-toggle">
+            <button id="darkmodebtn">Toggle Dark Mode</button>
         </section>
 
 
@@ -29,7 +34,7 @@
         </section>
 
         <section class="buttons">
-            <button type="button">Follow</button>
+            <button type="button" id="followbtn">Follow</button>
             <button type="button">Message</button>
         </section>
 
@@ -39,6 +44,7 @@
             <a href=""><i class="ri-instagram-line"></i></a>
             <a href=""><i class="ri-linkedin-fill"></i></a>
         </section>
+
 
     </main>
 </body>
