--- a/task1/index.html
+++ b/task1/index.html
@@ -45,6 +45,12 @@
             <a href=""><i class="ri-linkedin-fill"></i></a>
         </section>
 
+        <section class="like-section">
+            <i id="likebtn" class="ri-heart-line"></i>
+            <span id="likecount">0</span>
+        </section>
+
+
 
     </main>
 </body>
